; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_osd.c_vlclua_spu_channel_clear.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_osd.c_vlclua_spu_channel_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"Unable to find vout.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_spu_channel_clear to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_spu_channel_clear(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @luaL_checkinteger(i32* %6, i32 1)
  store i32 %7, i32* %4, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i32* @vlclua_get_vout_internal(i32* %8)
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @luaL_error(i32* %13, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  store i32 %14, i32* %2, align 4
  br label %21

15:                                               ; preds = %1
  %16 = load i32*, i32** %5, align 8
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @vout_UnregisterSubpictureChannel(i32* %16, i32 %17)
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @vout_Release(i32* %19)
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %15, %12
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @luaL_checkinteger(i32*, i32) #1

declare dso_local i32* @vlclua_get_vout_internal(i32*) #1

declare dso_local i32 @luaL_error(i32*, i8*) #1

declare dso_local i32 @vout_UnregisterSubpictureChannel(i32*, i32) #1

declare dso_local i32 @vout_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
